feat: admin cola

--- a/laokou-cloud/laokou-xxl-job/src/main/resources/i18n/message_en.properties
+++ b/laokou-cloud/laokou-xxl-job/src/main/resources/i18n/message_en.properties
@@ -53,9 +53,9 @@ daterangepicker_custom_monthnames=Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,De
 
 ## dataTable
 dataTable_sProcessing=processing...
-dataTable_sLengthMenu= _MENU_ records per page
+dataTable_sLengthMenu= _MENU_ records per pageQuery
 dataTable_sZeroRecords=No matching results
-dataTable_sInfo=page _PAGE_  ( Total _PAGES_ pages，_TOTAL_ records )
+dataTable_sInfo=pageQuery _PAGE_  ( Total _PAGES_ pages，_TOTAL_ records )
 dataTable_sInfoEmpty=No Record
 dataTable_sInfoFiltered=(Filtered by _MAX_ results)
 dataTable_sSearch=Search
@@ -193,7 +193,7 @@ joblog_lost_fail=Job result lost, marked as failure
 joblog_rolling_log=Rolling log
 joblog_rolling_log_refresh=Refresh 
 joblog_rolling_log_triggerfail=The job trigger fail, can not view the rolling log
-joblog_rolling_log_failoften=The request for the Rolling log is terminated, the number of failed requests exceeds the limit, Reload the log on the refresh page
+joblog_rolling_log_failoften=The request for the Rolling log is terminated, the number of failed requests exceeds the limit, Reload the log on the refresh pageQuery
 joblog_logid_unvalid=Log ID is illegal
 
 ## job group
