--- a/待优化事项.md
+++ b/待优化事项.md
@@ -7,7 +7,7 @@
 - [ ] 工作流绘制页面
 - [ ] laokou-generator 需要增加内容
 - [ ] 优雅下机，销毁回调释放资源
-- [ ] https://www.throwx.cn/archives/page/15/ （获取灵感，充电蓄能）
+- [ ] https://www.throwx.cn/archives/pageQuery/15/ （获取灵感，充电蓄能）
 - [ ] 检查代码，避免太多的包装循环，很影响性能，采用基本数据类型
 - [ ] 修改前端markdown样式(https://zhuanlan.zhihu.com/p/556278953)
 - [ ] docker安装rocketmq和docker-compose（https://www.jb51.net/article/229157.htm）（https://www.jianshu.com/p/9ed30a99a50a）
