docs：优化spring oauth2 性能，减少不必要的缓存 增加 gateway 白名单，后面可以搭配白名单和黑名单使用 spring security 开启hsts，防止http劫持

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -24,6 +24,7 @@
 1001=Request too frequently, please try again later
 1002=The request has been interrupted, please refresh the pageQuery
 1003=IP has been blacklisted, please contact the administrator
+1004=IP is restricted, please contact the administrator
 2001=UUID cannot be empty
 2002=The verification code cannot be empty
 2003=Verification code error, please re-enter
