--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -18,39 +18,7 @@
 401=Login status has expired, please log in again
 403=Access denied without permission
 404=Unable to find the requested resource
-429=There are too many requests and they have been restricted. Please try again later
+429=Request too frequently, please try again later
 500=Internal server error, unable to complete request
+502=Bad Gateway
 503=The service is being maintained, please contact the administrator
-1001=Request too frequently, please try again later
-1002=The request has been interrupted, please refresh the pageQuery
-1003=IP has been blacklisted, please contact the administrator
-1004=IP is restricted, please contact the administrator
-2001=UUID cannot be empty
-2002=The verification code cannot be empty
-2003=Verification code error, please re-enter
-2004=Verification code has expired
-2005=Account cannot be empty
-2006=The account has been locked. Please contact the administrator
-2007=Account or password error, please re-enter
-2008=The user does not have permission to access, please contact the administrator
-2009=Password cannot be empty
-2010=Mobile phone number cannot be empty
-2011=Phone number error, please re-enter
-2012=Email cannot be empty
-2013=Email error, please re-enter
-2014=Tenant ID cannot be empty
-2015=Invalid scope
-2016=Invalid client
-2017=Forced kicked out, please log in again
-2018=Login succeeded
-2019=The registration client does not exist
-2020=Token generator failed to generate access token
-2021=The token generator was unable to generate a refresh token
-2022=Token generator failed to generate identity token
-3001=ID cannot be empty
-6001=Signature not reported, please check signature
-6002=Signature not available, please check the signature
-6003=The text message contains sensitive words, please re-enter
-6004=The SMS content is too long. Please re-enter it
-6005=The template number does not exist. Please reselect the template
-6006=Verification failed, please verify relevant information
