--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -18,39 +18,7 @@
 401=登录状态已过期，请重新登录
 403=访问拒绝，没有权限
 404=无法找到请求的资源
-429=请求太多，已被限流，请稍后再试
+429=请求太频繁，请稍后再试
 500=服务器内部错误，无法完成请求
+502=错误网关
 503=服务正在维护，请联系管理员
-1001=请求过于频繁，请稍后再试
-1002=请求已中断，请刷新页面
-1003=IP被列入黑名单，请联系管理员
-1004=IP被限制，请联系管理员
-2001=UUID不能为空
-2002=验证码不能为空
-2003=验证码错误，请重新输入
-2004=验证码已过期
-2005=账号不能为空
-2006=账号已被锁定，请联系管理员
-2007=账号或密码错误，请重新输入
-2008=用户没有权限访问，请联系管理员
-2009=密码不能为空
-2010=手机号不能为空
-2011=手机号错误，请重新输入
-2012=邮箱不能为空
-2013=邮箱错误，请重新输入
-2014=租户ID不能为空
-2015=无效作用域
-2016=无效客户端
-2017=已被强制踢出，请重新登录
-2018=登录成功
-2019=注册客户端不存在
-2020=令牌生成器无法生成访问令牌
-2021=令牌生成器无法生成刷新令牌
-2022=令牌生成器无法生成标识令牌
-3001=ID不能为空
-6001=签名未报备，请检查签名
-6002=签名不可用，请检查签名
-6003=短信内容包含敏感词，请重新输入
-6004=短信内容过长，请重新输入
-6005=模板编号不存在，请重新选择模板
-6006=验证未通过，请核对相关信息
