feat：修改状态码

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -15,10 +15,25 @@
 #  */
 200=Request successful
 400=bad request
-401=Login status has expired, please log in again
+401=Login status has expired
 403=Access denied without permission
 404=Unable to find the requested resource
-429=Request too frequently, please try again later
+429=Request too frequently
 500=Internal server error, unable to complete request
 502=Bad Gateway
-503=The service is being maintained, please contact the administrator
+503=Service is being maintained
+100001=IP has been blacklisted
+100002=IP restricted
+200988=Token generator failed to generate identity token
+200989=The token generator was unable to generate a refresh token
+200990=Token generator failed to generate access token
+200991=The registration client does not exist
+200992=Invalid client
+200993=Invalid scope
+200994=Email error
+200995=Mobile number error
+200996=Account has been locked
+200997=Verification code has expired
+200998=Verification code error
+200999=Account or password error
+300001=Forced Kick Out
