--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation.properties
@@ -13,8 +13,11 @@
 #  * See the License for the specific language governing permissions and
 #  * limitations under the License.
 #  */
-sys.user.username.require=用户名不能为空
-sys.user.password.require=密码不能为空
-sys.role.name.require=角色名称不能为空
-sys.menu.pid.require=请选择父级菜单
-sys.menu.name.require=菜单名称不能为空
+oauth2.uuid.require=UUID不能为空
+oauth2.captcha.require=验证码不能为空
+oauth2.username.require=账号不能为空
+oauth2.password.require=密码不能为空
+oauth2.mobile.require=手机号不能为空
+oauth2.mail.require=邮箱不能为空
+oauth2.tenant-id.require=租户ID不能为空
+system.id.require=ID不能为空
