--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation_en_US.properties
@@ -13,27 +13,11 @@
 #  * See the License for the specific language governing permissions and
 #  * limitations under the License.
 #  */
-200=请求成功
-400=错误请求
-401=登录状态已过期
-403=访问拒绝，没有权限
-404=无法找到请求的资源
-429=请求太频繁
-500=服务器内部错误，无法完成请求
-502=错误网关
-503=服务正在维护
-100001=IP已列入黑名单
-100002=IP被限制
-200988=令牌生成器无法生成标识令牌
-200989=令牌生成器无法生成刷新令牌
-200990=令牌生成器无法生成访问令牌
-200991=注册客户端不存在
-200992=无效客户端
-200993=无效作用域
-200994=邮箱错误
-200995=手机号错误
-200996=账号已被锁定
-200997=验证码已过期
-200998=验证码错误
-200999=账号或密码错误
-300001=已被强制踢出
+oauth2.uuid.require=UUID cannot be empty
+oauth2.captcha.require=The verification code cannot be empty
+oauth2.username.require=Account cannot be empty
+oauth2.password.require=Password cannot be empty
+oauth2.mobile.require=Mobile phone number cannot be empty
+oauth2.mail.require=Email cannot be empty
+oauth2.tenant-id.require=Tenant ID cannot be empty
+system.id.require=ID cannot be empty
