--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -24,6 +24,7 @@
 503=Service is being maintained
 100001=IP has been blacklisted
 100002=IP restricted
+200001=Login succeeded
 200988=Token generator failed to generate identity token
 200989=The token generator was unable to generate a refresh token
 200990=Token generator failed to generate access token
