--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -33,8 +33,14 @@
 200993=Invalid scope
 200994=Email error
 200995=Mobile number error
-200996=Account has been locked
+200996=Account locked
 200997=Verification code has expired
 200998=Verification code error
 200999=Account or password error
 300001=Forced Kick Out
+998999=Request restricted
+998998=Degraded
+998997=Hot spot parameters are restricted
+998996=System rule error
+998995=Authorization rule error
+999999=Transaction has timed out
