--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -33,8 +33,14 @@
 200993=无效作用域
 200994=邮箱错误
 200995=手机号错误
-200996=账号已被锁定
+200996=账号已锁定
 200997=验证码已过期
 200998=验证码错误
 200999=账号或密码错误
 300001=已被强制踢出
+998999=请求已限流
+998998=已降级
+998997=热点参数已限流
+998996=系统规则错误
+998995=授权规则错误
+999999=事务已超时
