--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -37,7 +37,7 @@
 200997=Verification code has expired
 200998=Verification code error
 200999=Account or password error
-300001=Forced Kick Out
+300001=Account has been forcibly kicked out
 998999=Request restricted
 998998=Degraded
 998997=Hot spot parameters are restricted
