feat: 优化代码,为动态路由做准备

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -24,6 +24,7 @@
 503=服务正在维护
 100001=IP已列入黑名单
 100002=IP被限制
+100999=路由不存在
 200001=登录成功
 200988=令牌生成器无法生成标识令牌
 200989=令牌生成器无法生成刷新令牌
@@ -38,9 +39,9 @@
 200998=验证码错误
 200999=账号或密码错误
 300001=账号已强制踢出
-998999=请求已限流
-998998=已降级
-998997=热点参数已限流
-998996=系统规则错误
 998995=授权规则错误
+998996=系统规则错误
+998997=热点参数已限流
+998998=已降级
+998999=请求已限流
 999999=事务已超时
