--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en.properties
@@ -24,6 +24,7 @@
 503=Service is being maintained
 100001=IP has been blacklisted
 100002=IP restricted
+100999=Route does not exist
 200001=Login succeeded
 200988=Token generator failed to generate identity token
 200989=The token generator was unable to generate a refresh token
@@ -38,9 +39,9 @@
 200998=Verification code error
 200999=Account or password error
 300001=Account has been forcibly kicked out
-998999=Request restricted
-998998=Degraded
-998997=Hot spot parameters are restricted
-998996=System rule error
 998995=Authorization rule error
+998996=System rule error
+998997=Hot spot parameters are restricted
+998998=Degraded
+998999=Request restricted
 999999=Transaction has timed out
