--- a/视频教程.md
+++ b/视频教程.md
@@ -25,6 +25,7 @@
 
 ├── 流量治理（必学）   
         └── sentinel学习（待录制）    
+        └── jmeter学习（待录制）  
 
 ├── 分库分表&读写分离（必学）  
         └── mysql学习（待录制）    
