--- a/待优化事项.md
+++ b/待优化事项.md
@@ -12,6 +12,7 @@
 - [ ] docker安装rocketmq和docker-compose（https://www.jb51.net/article/229157.htm）（https://www.jianshu.com/p/9ed30a99a50a）
 - [ ] 有点意思（https://gitee.com/majz0908/jarboot?utm_source=poper_profile）
 - [ ] swagger注解补充
+- [ ] dubbo熔断降级
 - [ ] 灰度发布（全链路灰色路由）
 - [ ] 代码增加注释
 - [ ] 参考美团GTIS防重系统
