style: 优化代码风格

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en.properties
@@ -44,4 +44,5 @@
 998997=Hot spot parameters are restricted
 998998=Degraded
 998999=Request restricted
-999999=Transaction has timed out
+999998=Distributed transaction not started
+999999=Distributed transaction has timed out
