--- a/待优化事项.md
+++ b/待优化事项.md
@@ -2,8 +2,8 @@
 - [ ] jvm参数调整
 - [ ] 编写springcloud学习手册 http://doc.ruoyi.vip/ruoyi-cloud/cloud/auth.html#%E5%9F%BA%E6%9C%AC%E4%BB%8B%E7%BB%8D
 - [ ] 优化redis工具类（string、set、zset、hash、list） https://www.cnblogs.com/dijia478/p/8058775.html
-- [ ] 用户地图（百度地图api + 数据库ip + mongodb）
-- [ ] 微信公众号
+- [ ] 用户地图（百度地图api + 数据库ip + mongodb -> dubbo）
+- [ ] 微信公众号（使用weixin-java来开发相应的组件）
 - [ ] 工作流绘制页面
 - [ ] 优雅下机，销毁回调释放资源
 - [ ] https://www.throwx.cn/archives/pageQuery/15/ （获取灵感，充电蓄能）
@@ -12,12 +12,11 @@
 - [ ] 有点意思（https://gitee.com/majz0908/jarboot?utm_source=poper_profile）
 - [ ] swagger注解补充
 - [ ] dubbo熔断降级
+- [ ] dubbo与openfeign兼容（两套代码，自行替换，本人选用性能最高的那个）
 - [ ] 灰度发布（全链路灰色路由）
 - [ ] 代码增加注释
 - [ ] 参考美团GTIS防重系统
 - [ ] 定义插件扩展nacos
 - [ ] 增加注解（ConstraintValidator 正则表达式）
 - [ ] es旧API替换掉
-
-
-周末恢复更新
+- [ ] 单元测试（openfeign，防止项目升级后，出现遗漏）
