--- a/性能测试.md
+++ b/性能测试.md
@@ -1,11 +1,14 @@
- -Xmx256m   
+-Xmx256m   
 -Xms256m 
 
-10w请求（1000个线程）  
+2k并发请求
 <img src="doc/image/c1.png" alt="暂无图片">
 
-50w请求（1000个线程）  
+3k并发请求
 <img src="doc/image/c2.png" alt="暂无图片">
 
-100w请求（1000个线程）  
+4k并发请求
 <img src="doc/image/c3.png" alt="暂无图片">
+
+5k并发请求
+<img src="doc/image/c4.png" alt="暂无图片">
