--- a/laokou-ui/locales/zh-CN.yaml
+++ b/laokou-ui/locales/zh-CN.yaml
@@ -22,11 +22,13 @@ menus:
   purePermissionButton: 按钮权限
 status:
   pureLoad: 加载中...
-login:
+auth:
   username: 账号
   password: 密码
+  captcha: 验证码
   login: 登录
   usernameReg: 请输入账号
   passwordReg: 请输入密码
+  captchaReg: 请输入验证码
   passwordRuleReg: 密码格式应为8-18位数字、字母、符号的任意两种组合
 
