--- a/laokou-ui/locales/en.yaml
+++ b/laokou-ui/locales/en.yaml
@@ -1,6 +1,6 @@
-buttons:
-  pureLoginOut: LoginOut
-  pureLogin: Login
+button:
+  logout: Logout
+  login: Login
   pureSystemSet: Open ProjectConfig
   pureReload: Reload
   pureCloseCurrentTab: Close CurrentTab
@@ -10,9 +10,9 @@ buttons:
   pureCloseAllTabs: Close AllTabs
   pureContentFullScreen: Content FullScreen
   pureContentExitFullScreen: Content ExitFullScreen
-menus:
-  pureHome: Home
-  pureLogin: Login
+menu:
+  home: Home
+  login: Login
   pureAbnormal: Abnormal Page
   pureFourZeroFour: "404"
   pureFourZeroOne: "403"
