--- a/laokou-ui/locales/zh-CN.yaml
+++ b/laokou-ui/locales/zh-CN.yaml
@@ -1,6 +1,6 @@
-buttons:
-  pureLoginOut: 注销
-  pureLogin: 登录
+button:
+  logout: 注销
+  login: 登录
   pureSystemSet: 打开项目配置
   pureReload: 重新加载
   pureCloseCurrentTab: 关闭当前标签页
@@ -10,9 +10,9 @@ buttons:
   pureCloseAllTabs: 关闭全部标签页
   pureContentFullScreen: 内容区全屏
   pureContentExitFullScreen: 内容区退出全屏
-menus:
-  pureHome: 首页
-  pureLogin: 登录
+menu:
+  home: 首页
+  login: 登录
   pureAbnormal: 异常页面
   pureFourZeroFour: "404"
   pureFourZeroOne: "403"
