--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -13,7 +13,7 @@
 #  * See the License for the specific language governing permissions and
 #  * limitations under the License.
 #  */
-OK=OK
+OK=Request successful
 Bad_Request=Bad request
 Unauthorized=Login status has expired
 Forbidden=Access denied without permission
