--- a/archive/docs/01.指南/05.后端指南/07.分布式链路跟踪之ELK日志.md
+++ b/archive/docs/01.指南/05.后端指南/07.分布式链路跟踪之ELK日志.md
@@ -291,7 +291,7 @@ log4j2配置
 
 ```xml
 
-<Configuration status="ERROR" monitorInterval="5">
+<Configuration status="INFO" monitorInterval="5">
 	<!-- 变量配置 -->
 	<Properties>
 		<!-- 存放目录 -->
