--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -175,6 +175,18 @@ docker-compose up - d
 
 注意：<font color="red">Maven 版本请使用3.9.x</font>
 
+<font color="red">注意：需要配置Maven setting.xml</font>
+
+```xml
+<mirrors>
+	<mirror>
+	<id>nexus</id>
+	<mirrorOf>*,!spring-milestone,!spring-snapshots,!spring-release</mirrorOf>
+	<url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
+	</mirror>
+</mirrons>
+```
+
 
 🚀 软件版本
 <table>
