--- a/archive/docs/01.指南/00.开发手册/02.组件【banner】.md
+++ b/archive/docs/01.指南/00.开发手册/02.组件【banner】.md
@@ -24,4 +24,4 @@ permalink: /pages/zj02/
 # 3.自定义变量，如${spring-cloud-alibaba-version}表示获取spring-cloud-alibaba版本的自定义变量
 ```
 
-我是老寇，我们下次再见
+我是老寇，我们下次再见啦！
