--- a/archive/docs/01.指南/01.环境搭建/07.Docker安装Postgresql 16.1.md
+++ b/archive/docs/01.指南/01.环境搭建/07.Docker安装Postgresql 16.1.md
@@ -18,3 +18,4 @@ mkdir -p /home/data/postgresql
 docker run --name postgresql --privileged -e POSTGRES_USER=root -e POSTGRES_PASSWORD=laokou123  -p 5432:5432 -v /home/data/postgresql:/var/lib/postgresql/data -d postgres
 ```
 
+我是老寇，我们下次再见啦！
