feat: 增加mqtt server和相关的测试用例

--- a/archive/docs/01.指南/08.文章/00.物联网之对接MQTT最佳实践.md
+++ b/archive/docs/01.指南/08.文章/00.物联网之对接MQTT最佳实践.md
@@ -1222,34 +1222,34 @@ public class VertxMqttClient {
     public void open() {
        mqttClient.closeHandler(v -> {
           isConnected.set(false);
-          log.error("【Vertx-MQTT】 => MQTT连接断开，客户端ID：{}", mqttClientProperties.getClientId());
+          log.error("【Vertx-MQTT-Client】 => MQTT连接断开，客户端ID：{}", mqttClientProperties.getClientId());
           reconnect();
        })
           .publishHandler(messageSink::tryEmitNext)
           // 仅接收QoS1和QoS2的消息
           .publishCompletionHandler(id -> {
-             // log.info("【Vertx-MQTT】 => 接收MQTT的PUBACK或PUBCOMP数据包，数据包ID：{}", id);
+             // log.info("【Vertx-MQTT-Client】 => 接收MQTT的PUBACK或PUBCOMP数据包，数据包ID：{}", id);
           })
           .subscribeCompletionHandler(ack -> {
-             // log.info("【Vertx-MQTT】 => 接收MQTT的SUBACK数据包，数据包ID：{}", ack.messageId());
+             // log.info("【Vertx-MQTT-Client】 => 接收MQTT的SUBACK数据包，数据包ID：{}", ack.messageId());
           })
           .unsubscribeCompletionHandler(id -> {
-             // log.info("【Vertx-MQTT】 => 接收MQTT的UNSUBACK数据包，数据包ID：{}", id);
+             // log.info("【Vertx-MQTT-Client】 => 接收MQTT的UNSUBACK数据包，数据包ID：{}", id);
           })
           .pingResponseHandler(s -> {
-             // log.info("【Vertx-MQTT】 => 接收MQTT的PINGRESP数据包");
+             // log.info("【Vertx-MQTT-Client】 => 接收MQTT的PINGRESP数据包");
           })
           .connect(mqttClientProperties.getPort(), mqttClientProperties.getHost(), connectResult -> {
              if (connectResult.succeeded()) {
                 isConnected.set(true);
-                log.info("【Vertx-MQTT】 => MQTT连接成功，主机：{}，端口：{}，客户端ID：{}", mqttClientProperties.getHost(),
+                log.info("【Vertx-MQTT-Client】 => MQTT连接成功，主机：{}，端口：{}，客户端ID：{}", mqttClientProperties.getHost(),
                       mqttClientProperties.getPort(), mqttClientProperties.getClientId());
                 resubscribe();
              }
              else {
                 isConnected.set(false);
                 Throwable ex = connectResult.cause();
-                log.error("【Vertx-MQTT】 => MQTT连接失败，原因：{}，客户端ID：{}", ex.getMessage(),
+                log.error("【Vertx-MQTT-Client】 => MQTT连接失败，原因：{}，客户端ID：{}", ex.getMessage(),
                       mqttClientProperties.getClientId(), ex);
                 reconnect();
              }
@@ -1274,7 +1274,7 @@ public class VertxMqttClient {
 
     private void reconnect() {
        if (isReconnected.get()) {
-          log.info("【Vertx-MQTT】 => MQTT尝试重连");
+          log.info("【Vertx-MQTT-Client】 => MQTT尝试重连");
           vertx.setTimer(mqttClientProperties.getReconnectInterval(),
                 handler -> ThreadUtils.newVirtualTaskExecutor().execute(this::open));
        }
@@ -1285,11 +1285,11 @@ public class VertxMqttClient {
        checkTopicAndQos(topics);
        mqttClient.subscribe(topics, subscribeResult -> {
           if (subscribeResult.succeeded()) {
-             log.info("【Vertx-MQTT】 => MQTT订阅成功，主题: {}", String.join("、", topics.keySet()));
+             log.info("【Vertx-MQTT-Client】 => MQTT订阅成功，主题: {}", String.join("、", topics.keySet()));
           }
           else {
              Throwable ex = subscribeResult.cause();
-             log.error("【Vertx-MQTT】 => MQTT订阅失败，主题：{}，错误信息：{}", String.join("、", topics.keySet()), ex.getMessage(),
+             log.error("【Vertx-MQTT-Client】 => MQTT订阅失败，主题：{}，错误信息：{}", String.join("、", topics.keySet()), ex.getMessage(),
                    ex);
           }
        });
@@ -1307,7 +1307,7 @@ public class VertxMqttClient {
     private void consume() {
        Disposable disposable = messageSink.asFlux().doOnNext(mqttPublishMessage -> {
           String topic = mqttPublishMessage.topicName();
-          log.info("【Vertx-MQTT】 => MQTT接收到消息，Topic：{}", topic);
+          log.info("【Vertx-MQTT-Client】 => MQTT接收到消息，Topic：{}", topic);
           for (MessageHandler messageHandler : messageHandlers) {
              if (messageHandler.isSubscribe(topic)) {
                 messageHandler.handle(new MqttMessage(mqttPublishMessage.payload(), topic));
@@ -1330,12 +1330,12 @@ public class VertxMqttClient {
        mqttClient.disconnect(disconnectResult -> {
           if (disconnectResult.succeeded()) {
              disposable();
-             log.info("【Vertx-MQTT】 => MQTT断开连接成功");
+             log.info("【Vertx-MQTT-Client】 => MQTT断开连接成功");
              disposables.clear();
           }
           else {
              Throwable ex = disconnectResult.cause();
-             log.error("【Vertx-MQTT】 => MQTT断开连接失败，错误信息：{}", ex.getMessage(), ex);
+             log.error("【Vertx-MQTT-Client】 => MQTT断开连接失败，错误信息：{}", ex.getMessage(), ex);
           }
        });
     }
@@ -1344,11 +1344,11 @@ public class VertxMqttClient {
        checkTopic(topics);
        mqttClient.unsubscribe(topics, unsubscribeResult -> {
           if (unsubscribeResult.succeeded()) {
-             log.info("【Vertx-MQTT】 => MQTT取消订阅成功，主题：{}", String.join("、", topics));
+             log.info("【Vertx-MQTT-Client】 => MQTT取消订阅成功，主题：{}", String.join("、", topics));
           }
           else {
              Throwable ex = unsubscribeResult.cause();
-             log.error("【Vertx-MQTT】 => MQTT取消订阅失败，主题：{}，错误信息：{}", String.join("、", topics), ex.getMessage(), ex);
+             log.error("【Vertx-MQTT-Client】 => MQTT取消订阅失败，主题：{}，错误信息：{}", String.join("、", topics), ex.getMessage(), ex);
           }
        });
     }
@@ -1379,14 +1379,14 @@ public class VertxMqttClient {
     private void checkTopicAndQos(Map<String, Integer> topics) {
        topics.forEach((topic, qos) -> {
           if (StringUtils.isEmpty(topic) || ObjectUtils.isNull(qos)) {
-             throw new IllegalArgumentException("【Vertx-MQTT】 => Topic and QoS cannot be null");
+             throw new IllegalArgumentException("【Vertx-MQTT-Client】 => Topic and QoS cannot be null");
           }
        });
     }
 
     private void checkTopic(List<String> topics) {
        if (CollectionUtils.isEmpty(topics)) {
-          throw new IllegalArgumentException("【Vertx-MQTT】 => Topics list cannot be empty");
+          throw new IllegalArgumentException("【Vertx-MQTT-Client】 => Topics list cannot be empty");
        }
     }
 
