--- a/archive/docs/01.指南/08.文章/01.物联网之使用Vertx实现MQTT-Server最佳实践【响应式】.md
+++ b/archive/docs/01.指南/08.文章/01.物联网之使用Vertx实现MQTT-Server最佳实践【响应式】.md
@@ -648,7 +648,7 @@ public class MqttServerApp implements CommandLineRunner {
        VertxMqttServer vertxMqttServer = new VertxMqttServer(vertx, properties, reactiveMessageHandlers);
        // 启动服务
        vertxMqttServer.start().subscribeOn(Schedulers.boundedElastic()).subscribe();
-       // 推送数据
+       // 发布数据
        vertxMqttServer.publish().subscribeOn(Schedulers.boundedElastic()).subscribe();
        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
           // 清除缓存
