--- a/doc/db/README.adoc
+++ b/doc/db/README.adoc
@@ -5,4 +5,5 @@
 - kcloud_platform_iot.sql 【物联管理】
 - kcloud_platform_nacos.sql 【Nacos】
 - kcloud_platform_generator.sql 【代码生成】
+- kcloud_platform_test.sql 【测试】
 - kcloud_platform_snail_job.sql 【Snail Job】
