docs: 修改更新日志

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -24,6 +24,8 @@ permalink: /pages/b04951/
 ###### 功能
 🚀 重构三层架构【MVC】，改造为分层架构【DDD领域驱动设计】，使用阿里COLA应用框架开发【花费时间特别长，项目的灵魂】
 
+🚀 领域对象交给Spring管理，避免重复创建对象
+
 🚀 支持COLA的规则/扩展点/流程【已搬COLA代码到本项目】
 
 🚀 OAuth2支持用户名密码模式、客户端模式、授权码模式【PKCE】、刷新令牌模式、设备码模式、手机号+验证码模式、邮箱+验证码模式【遵循DDD领域驱动设计，学习DDD可以看看auth服务】
