feat: 提交mp测试用例

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -36,7 +36,7 @@ permalink: /pages/b04951/
 
 🚀 新增物模型/产品类别，前端对接完毕
 
-🚀 支持MQTT【服务端+客户端】/TCP【服务端】/HTTP【服务端】/WebSocket【服务端】来实现数据采集，通过Kafka转发数据到IoT平台【本人提出IoT=采集+存储+分析】
+🚀 支持MQTT【服务端+客户端】/TCP【服务端】/HTTP【服务端】/WebSocket【服务端】/UDP【服务端】来实现数据采集，通过Kafka转发数据到IoT平台【本人提出IoT=采集+存储+分析】
 
 🚀 支持WebSocket【已整合，支持Nacos负载均衡】
 
