feat: 增加modbus tcp/udp测试代码

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -38,6 +38,8 @@ permalink: /pages/b04951/
 
 🚀 支持MQTT【服务端+客户端】/TCP【服务端】/HTTP【服务端】/WebSocket【服务端】/UDP【服务端】来实现数据采集，通过Kafka转发数据到IoT平台【本人提出IoT=采集+存储+分析】
 
+🚀 支持Modbus TCP/UDP
+
 🚀 支持WebSocket【已整合，支持Nacos负载均衡】
 
 🚀 支持Spring Cloud Gateway从Nacos拉取动态路由【可自定义配置router.json】
