style: 前端UI接口规范修改，增加modbus rtu/ascii测试用例

--- a/archive/docs/01.指南/05.后端指南/00.COLA代码规范.md
+++ b/archive/docs/01.指南/05.后端指南/00.COLA代码规范.md
@@ -112,8 +112,8 @@ validateUserCredentials() </span> 或 <span style="color: #00dd00;"> eliminateDu
 | 新增 | save   | saveUser              |
 | 删除 | remove | removeUser            |
 | 修改 | modify | modifyUser            |
-| 查看 | get    | getById               |
-| 列表 | list   | listUser listMenuTree |
+| 查看 | get    | getByIdUser           |
+| 列表 | list   | listUser listTreeMenu |
 | 分页 | page   | pageUser              |
 | 统计 | count  | countUser             |
 | 导入 | import | importUser            |
@@ -129,27 +129,27 @@ validateUserCredentials() </span> 或 <span style="color: #00dd00;"> eliminateDu
 
 ### 方法命名(基础设施层)
 
-| 操作 | 方法名约定  | 举例         |
-|:---|:-------|:-----------|
-| 新增 | create | createUser |
-| 删除 | delete | deleteUser |
-| 修改 | update | updateUser |
-| 查看 | get    | getById    |
-| 列表 | list   | listUser   |
-| 分页 | page   | pageUser   |
-| 统计 | count  | countUser  |
+| 操作 | 方法名约定  | 举例          |
+|:---|:-------|:------------|
+| 新增 | create | createUser  |
+| 删除 | delete | deleteUser  |
+| 修改 | update | updateUser  |
+| 查看 | get    | getByIdUser |
+| 列表 | list   | listUser    |
+| 分页 | page   | pageUser    |
+| 统计 | count  | countUser   |
 
 ### 方法命名(Mapper)
 
-| 操作 | 方法名约定  | 举例          |
-|:---|:-------|:------------|
-| 新增 | insert | insertUser  |
-| 删除 | delete | deleteUser  |
-| 修改 | update | updateUser  |
-| 查看 | select | selectById  |
-| 列表 | list   | selectList  |
-| 分页 | page   | selectPage  |
-| 统计 | count  | selectCount |
+| 操作 | 方法名约定  | 举例                          |
+|:---|:-------|:----------------------------|
+| 新增 | insert | insertUser                  |
+| 删除 | delete | deleteUser                  |
+| 修改 | update | updateUser                  |
+| 查看 | select | selectUserById selectUserId |
+| 列表 | list   | selectUserList              |
+| 分页 | page   | selectUserPage              |
+| 统计 | count  | selectUserCount             |
 
 ## 4.错误码命名(显性)
 
