docs: 修改更新日志

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -24,7 +24,7 @@ permalink: /pages/b04951/
 ###### 功能
 🚀 重构三层架构【MVC】，改造为分层架构【DDD领域驱动设计】，使用阿里COLA应用框架开发【花费时间特别长，项目的灵魂】
 
-🚀 领域对象交给Spring管理，避免重复创建对象
+🚀 领域对象交给Spring管理解耦业务，对象延迟加载，避免内存泄漏
 
 🚀 支持COLA的规则/扩展点/流程【已搬COLA代码到本项目】
 
