--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -6,6 +6,17 @@ permalink: /pages/b04951/
 
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！
 
+#### 4.0.0更新日志
+
+###### 版本
+🚀 升级Spring Boot版本到4.0.0
+
+###### 功能
+
+🚀 增加Pulsar（花费时间长，IoT的灵魂）
+
+🚀 增加多租户【IoT数据隔离，多数据源存储IoT数据】
+
 #### 3.5.0更新日志【包含之前版本】
 
 ###### 版本
