feat: mqtt设备消息上报到pulsar，支持多租户发送【响应式】，iot直接引入分布式ID依赖，避免使用openfeign造成请求阻塞的情况【高并发场景】，使用pulsar需要自己手动创建租户，命名空间，主题，增加coap依赖

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -51,6 +51,8 @@ permalink: /pages/b04951/
 
 🚀 支持Modbus TCP/UDP/RTU/ASCII
 
+🚀 支持CoAP
+
 🚀 支持WebSocket【已整合，支持Nacos负载均衡】
 
 🚀 支持Spring Cloud Gateway从Nacos拉取动态路由【可自定义配置router.json】
