--- a/README.adoc
+++ b/README.adoc
@@ -158,6 +158,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 |Netty                       |4.2.1.Final
 |Kafka                       |4.0.0
 |EMQX                        |5.4.1
+|Pulsar                      |4.0.5
 |TimescaleDB                 |17
 |TDengine                    |3.3.5.0
 |Liquibase                   |4.30.0
