--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -6,17 +6,6 @@ permalink: /pages/b04951/
 
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！
 
-#### 4.0.0更新日志
-
-###### 版本
-🚀 升级Spring Boot版本到4.0.0
-
-###### 功能
-
-🚀 增加Pulsar（花费时间长，IoT的灵魂）
-
-🚀 增加多租户【IoT数据隔离，多数据源存储IoT数据】
-
 #### 3.5.0更新日志【包含之前版本】
 
 ###### 版本
@@ -38,6 +27,26 @@ permalink: /pages/b04951/
 🚀 领域对象交给Spring管理解耦业务，对象延迟加载，避免内存泄漏
 
 🚀 支持COLA的规则/扩展点/流程【已搬COLA代码到本项目】
+
+🚀 构建物联网技术栈，摈弃互联网那一套技术栈
+
+🚀 项目移除RocketMQ
+
+🚀 项目强制依赖Kafka，Pulsar
+
+🚀 用户权限和IoT数据都改成自增，分库分表只保存不修改
+
+🚀 广播队列由Kafka实现，不同的消费者组来实现
+
+🚀 项目移除领域溯源的概念，只保留领域事件，统一由MQ处理
+
+🚀 开两个分支，一个阻塞式【主要维护】，一个响应式【正在探索】，移除乱七八糟的写法，只保留最佳写法
+
+🚀 多租户架构变更，用户权限只做字段隔离，IoT数据独立数据源，这样就可以容纳很多的数据【针对物联网业务，合理调整】
+
+🚀 增加Pulsar（IoT的灵魂）
+
+🚀 增加多租户【IoT数据隔离，多数据源存储IoT数据，还在实现中】
 
 🚀 OAuth2支持用户名密码模式、客户端模式、授权码模式【PKCE】、刷新令牌模式、设备码模式、手机号+验证码模式、邮箱+验证码模式【遵循DDD领域驱动设计，学习DDD可以看看auth服务】
 
