feat: 优化代码，删除没完成的文档

--- a/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
+++ b/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
@@ -969,7 +969,7 @@ class NamingUtilsTest {
 		Assertions.assertEquals("", nacosDiscoveryProperties.getEndpoint());
 		Assertions.assertEquals("", nacosDiscoveryProperties.getAccessKey());
 		Assertions.assertEquals("", nacosDiscoveryProperties.getSecretKey());
-		Assertions.assertEquals("laokou-cluster", nacosDiscoveryProperties.getClusterName());
+		Assertions.assertEquals("nacos-cluster", nacosDiscoveryProperties.getClusterName());
 		Assertions.assertNotNull(nacosDiscoveryProperties.getNacosProperties());
 		Assertions.assertNotNull(namingUtils);
 	}
@@ -1191,7 +1191,7 @@ spring:
         # true 临时 false 持久
         ephemeral: true
         # 集群名称
-        cluster-name: laokou-cluster
+        cluster-name: nacos-cluster
 		heart-beat:
 			# 开启心跳
 			enabled: true
@@ -1209,7 +1209,7 @@ spring:
 		# 密码
         password: nacos
 		# 集群名称
-        cluster-name: laokou-cluster
+        cluster-name: nacos-cluster
         # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
         # 指定读取的文件格式
         file-extension: yaml
