feat: 优化代码，登录日志基于kafka发送，kafka使用fury序列化

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -56,6 +56,8 @@ permalink: /pages/b04951/
 
 🚀 支持COLA的规则/扩展点/流程【已搬COLA代码到本项目】
 
+🚀 严格遵循COLA代码规范
+
 🚀 开两个分支，一个阻塞式【主要维护】，一个响应式【正在探索】，移除乱七八糟的写法，只保留最佳写法
 
 🚀 增加Pulsar（IoT的灵魂）
