--- a/archive/docs/01.指南/08.文章/01.物联网之使用Vertx实现MQTT-Server最佳实践【响应式】.md
+++ b/archive/docs/01.指南/08.文章/01.物联网之使用Vertx实现MQTT-Server最佳实践【响应式】.md
@@ -234,9 +234,9 @@ spring:
       # 批量batch类型
       type: batch
       # topic不存在报错
-      missing-topics-fatal: false
+      missing-topics-fatal: true
     admin:
-      auto-create: false
+      auto-create: true
 ```
 
 ###### mqtt-server【响应式】
