fix: 解决依赖冲突

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -42,6 +42,8 @@ permalink: /pages/b04951/
 
 🚀 增加GRPC替换掉OpenFeign【基于nacos负载均衡】
 
+🚀 Kafka使用Fury序列化与反序列化【移除原来字符串序列化】
+
 #### 3.5.0更新日志【包含之前版本】
 
 ###### 版本
