feat: 增加dubbo替换掉openfeign，grpc-spring项目都没人维护，直接采用成熟的方案整

--- a/README.adoc
+++ b/README.adoc
@@ -151,6 +151,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 |Spring Authorization Server |1.5.0
 |Mybatis Plus                |3.5.12
 |Nacos                       |3.0.0
+|Dubbo                       |3.3.4
 |Redis                       |8.0.1
 |Elasticsearch               |8.18.1
 |Netty                       |4.2.1.Final
@@ -168,7 +169,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 - 配置中心&服务注册&发现：Nacos
 - API网关：Spring Cloud Gateway
 - 认证授权：Spring Security OAuth2 Authorization Server
-- 远程调用：GRPC
+- 远程调用：Dubbo
 - 客户端请求：OkHttp & HttpClient & WebClient & RestClient
 - 负载均衡：Spring Cloud Loadbalancer
 - 服务熔断&降级&限流：Resilience4j
