--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -40,7 +40,7 @@ permalink: /pages/b04951/
 
 🚀 租户只支持精准匹配数据库表，不支持模糊匹配
 
-🚀 增加GRPC替换掉OpenFeign【基于nacos负载均衡】
+🚀 增加Dubbo替换掉OpenFeign【基于nacos负载均衡】
 
 🚀 Kafka使用Fury序列化与反序列化【移除原来字符串序列化】
 
