--- a/README.adoc
+++ b/README.adoc
@@ -187,7 +187,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 - 网络通讯：Netty
 - 持续集成&交付：Jenkins
 - 持久层框架：Mybatis Plus
-- JSON序列化：Jackson & Fury
+- 序列化&反序列化：Jackson & Fury
 - 数据库：Postgresql
 - 时序数据库：TimescaleDB & TDengine & InfluxDB
 - 数据库迁移：Liquibase
