test: fury升级至0.11.0-快照

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -9,7 +9,10 @@ permalink: /pages/b04951/
 #### 3.5.1更新日志
 
 ###### 版本
+
 🚀 升级Spring Boot版本到3.5.1
+
+🚀 Fury升级到0.11.0
 
 ###### 功能
 🚀 为了减少不必要的修改，分别将laokou_前缀改为iot和LAOKOU_改为IOT，避免自定义项目结构修改过多的代码【主要修改NACOS命名空间和MQ主题】
