feat: dubbo开启fury序列化，共用一个fury

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -47,6 +47,10 @@ permalink: /pages/b04951/
 
 🚀 Pulsar使用Fory序列化与反序列化
 
+🚀 Dubbo使用Fury序列化与反序列化
+
+🚀 全局共用一个FuryFactory，强制注册类型
+
 #### 3.5.0更新日志【包含之前版本】
 
 ###### 版本
