feat: 提交文档，gateway的服务已降级增加国际化配置

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -33,7 +33,7 @@ permalink: /pages/b04951/
 
 🚀 修改二级缓存【Caffine+Redis】，去掉本地缓存，只保留Redis
 
-🚀 移除Sentinel，替代方案Resilience4j
+🚀 移除Sentinel，替代方案Resilience4j【Spring Cloud Gateway已完成改造】
 
 🚀 增量数据库Liquebase
 
@@ -50,6 +50,8 @@ permalink: /pages/b04951/
 🚀 Dubbo使用Fury序列化与反序列化
 
 🚀 全局共用一个FuryFactory，强制注册类型
+
+🚀 Spring Cloud Gateway支持Redis分布式限流
 
 #### 3.5.0更新日志【包含之前版本】
 
