--- a/laokou-cloud/laokou-gateway/src/main/resources/i18n/gateway_message_en.properties
+++ b/laokou-cloud/laokou-gateway/src/main/resources/i18n/gateway_message_en.properties
@@ -14,3 +14,4 @@
 #  * limitations under the License.
 #  */
 S_Gateway_RouterNotExist=Router does not exist
+S_Resilience4J_ServiceDegraded=Service has been downgraded
