--- a/archive/docs/02.赞助/00.赞助.md
+++ b/archive/docs/02.赞助/00.赞助.md
@@ -22,6 +22,7 @@ article: false
 
 |     时间     |  网名   |   赞助    |         备注         |
 |:----------:|:-----:|:-------:|:------------------:|
+| 2025/06/11 |  路*   | ￥20.00  |       感谢开源~        |
 | 2025/01/25 |  擎*   | ￥20.00  |        请喝咖啡        |
 | 2024/12/08 |  t*   | ￥199.00 |         无          |
 | 2024/12/02 |  'c*  | ￥399.00 |         无          |
