--- a/src/docs/asciidoc/开篇.adoc
+++ b/src/docs/asciidoc/开篇.adoc
@@ -94,6 +94,12 @@
 |===
 |时间         |网名        |赞助           |备注
 
+|2025/06/11 |  路*   | ￥20.00  |        感谢开源~
+|2025/01/25 |  擎*   | ￥20.00  |        请喝咖啡
+|2024/12/08  |t*          |￥199.00      |无
+|2024/12/02  |'c*         |￥399.00      |无
+|2024/11/25  |tio*        |￥520.00      |希望KCloud飞起，实现专精特新!
+|2024/08/01  |*ckai       |￥88.00       |加油~
 |2024/04/19  |*保熟       |￥188.00      |越做越好
 |2024/03/20  |A细节*      |￥66.00       |无
 |2024/03/03  |y*i        |￥58.88       |无
