feat: 升级sas至1.5.1，测试dubbo的自适应负载均衡，增加gateway断路器配置

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -14,6 +14,8 @@ permalink: /pages/b04951/
 
 🚀 Fury升级到0.11.0
 
+🚀 升级Spring OAuth2 Authorization Server版本到1.5.1
+
 ###### 功能
 🚀 为了减少不必要的修改，分别将laokou_前缀改为iot和LAOKOU_改为IOT，避免自定义项目结构修改过多的代码【主要修改NACOS命名空间和MQ主题】
 
