feat: fury改名为fory，并升级至0.11.0，增加gateway的断路器配置

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -12,14 +12,14 @@ permalink: /pages/b04951/
 
 🚀 升级Spring Boot版本到3.5.1
 
-🚀 Fury升级到0.11.0
+🚀 Fory升级到0.11.0
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.1
 
 ###### 功能
 🚀 为了减少不必要的修改，分别将laokou_前缀改为iot和LAOKOU_改为IOT，避免自定义项目结构修改过多的代码【主要修改NACOS命名空间和MQ主题】
 
-🚀 Redis序列化将Jackson改为Fury【Jackson序列化已移除】
+🚀 Redis序列化将Jackson改为Fory【Jackson序列化已移除】
 
 🚀 构建物联网技术栈，摈弃互联网那一套技术栈，项目移除RocketMQ【Kafka替代RocketMQ】/ShardingSphere/Seata/Dubbo以及其他用不到的模块和依赖，简化项目结构，专注于业务，业务驱动技术！！！【主要还是我玩腻了，东西多了懒得维护，现在本项目的技术栈只为IoT服务】
 
@@ -43,15 +43,15 @@ permalink: /pages/b04951/
 
 🚀 增加Dubbo替换掉OpenFeign【基于nacos负载均衡】
 
-🚀 Kafka使用Fury序列化与反序列化【移除原来字符串序列化】
+🚀 Kafka使用Fory序列化与反序列化【移除原来字符串序列化】
 
 🚀 项目移除snail job模块【自己维护，自己集成】
 
 🚀 Pulsar使用Fory序列化与反序列化
 
-🚀 Dubbo使用Fury序列化与反序列化
+🚀 Dubbo使用Fory序列化与反序列化
 
-🚀 全局共用一个FuryFactory，强制注册类型
+🚀 全局共用一个ForyFactory，强制注册类型
 
 🚀 Spring Cloud Gateway支持Redis分布式限流
 
