--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -12,7 +12,7 @@ permalink: /pages/b04951/
 
 🚀 升级Spring Boot版本到3.5.3
 
-🚀 Fory升级到0.11.0
+🚀 Fory升级到0.12.0-SNAPSHOT
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.1
 
