style: 优化代码风格

--- a/archive/docs/01.指南/05.后端指南/09.动态路由.md
+++ b/archive/docs/01.指南/05.后端指南/09.动态路由.md
@@ -616,14 +616,14 @@ public class NacosLoadBalancer implements ReactorServiceInstanceLoadBalancer {
 			if (ipv6InstanceList.isEmpty()) {
 				return instances.stream()
 					.filter(instance -> Pattern.matches(IPV4_REGEX, instance.getHost()))
-					.collect(Collectors.toList());
+					.toList();
 			} else {
 				return ipv6InstanceList;
 			}
 		}
 		return instances.stream()
 			.filter(instance -> Pattern.matches(IPV4_REGEX, instance.getHost()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
@@ -693,7 +693,7 @@ public class NacosLoadBalancer implements ReactorServiceInstanceLoadBalancer {
 				List<ServiceInstance> sameClusterInstances = serviceInstances.stream().filter(serviceInstance -> {
 					String cluster = serviceInstance.getMetadata().get(CLUSTER_CONFIG);
 					return StringUtils.equals(cluster, clusterName);
-				}).collect(Collectors.toList());
+				}).toList();
 				if (!CollectionUtils.isEmpty(sameClusterInstances)) {
 					instancesToChoose = sameClusterInstances;
 				}
