--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -12,6 +12,14 @@ permalink: /pages/b04951/
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.2
 
+###### 功能
+
+🚀 移除优雅停机
+
+🚀 网关加密去掉，由auth服务解密【用户名密码登录】
+
+🚀 去掉@Autowired注解，改为构造器注入
+
 #### 3.5.1更新日志
 
 ###### 版本
@@ -21,6 +29,8 @@ permalink: /pages/b04951/
 🚀 Fory升级到0.12.0-SNAPSHOT
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.1
+
+🚀 重构oss上传文件【本地/亚马逊S3】，独立服务，基于Dubbo调用
 
 ###### 功能
 🚀 为了减少不必要的修改，分别将laokou_前缀改为iot和LAOKOU_改为IOT，避免自定义项目结构修改过多的代码【主要修改NACOS命名空间和MQ主题】
@@ -55,7 +65,7 @@ permalink: /pages/b04951/
 
 🚀 Pulsar使用Fory序列化与反序列化
 
-🚀 Dubbo使用Fory序列化与反序列化
+🚀 Dubbo使用Fury序列化与反序列化
 
 🚀 全局共用一个ForyFactory，强制注册类型
 
