feat: 增加oss log便于刷新oss url，优化代码

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -12,6 +12,8 @@ permalink: /pages/b04951/
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.2
 
+🚀 升级Spring Cloud Alibaba版本到2023.0.3.3
+
 ###### 功能
 
 🚀 移除优雅停机
